--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.2.3",
     "next": "^8.1.0",
     "react": "^16.8.6",
