--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.2.3",
     "next": "^8.1.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
