--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.2",
@@ -20,7 +21,7 @@
     "mongodb": "^3.2.3",
     "next": "^8.1.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-google-oauth": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
