--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.0.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.2",
