--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon -- -r dotenv/config server.js -p ${PORT}",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js -p ${PORT}"
+    "start": "NODE_ENV=production node server.js -p ${PORT}",
+    "deploy": "git push heroku master"
   },
   "keywords": [],
   "author": "",
