--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-flickity-component": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
