--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "nodemon": "^1.18.11"
   }
 }
